--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint": "^9.22.0",
     "eslint-config-dicodingacademy": "^0.9.4",
     "globals": "^16.0.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
@@ -26,6 +27,9 @@
     "dotenv": "^16.4.7",
     "nanoid": "^3.3.8",
     "nodemailer": "^6.10.0",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "uuid": "^11.1.0"
   }
 }
